--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,8 @@
     "@mui/material": "^5.16.7",
     "@mui/styled-engine": "^5.16.6",
     "chart.js": "^4.4.3",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
